HelloUltraviolet/Fixtures/RejectedSource/Statements/BreakOutsideLoop/Expected.uv
//! Expected diagnostic metadata for the BreakOutsideLoop rejected-source specimen.

expectedDiagnostic("E-SEM-3162", "rule.18.Break-Outside-Loop")
